client/src/styles.scss
@import './styles/constants.scss';
@import './styles/material.scss';
@import '~bootstrap-css-only/css/bootstrap.min.css';
@import '~font-awesome/css/font-awesome.min.css';

html, body {
  margin: 0px;
  padding: 0px;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

.fill {
  width: 100%;
}

a.no-hover {
  &:hover {
    text-decoration: none;
  }
}

.page-title {
  font-size: 28px;
  margin-bottom: 10px;
  text-align: center;

  @media only screen and (max-width: $sm) {
    font-size: 24px;
  }
}

.block-label {
  display: block;
  font-weight: bold;
  color: $accent-darkest;
}

.inline-label {
  display: inline-block;
  margin-bottom: 2px;
  color: $accent;
  vertical-align: top;

  & + * {
    margin-left: 7px;
  }
}

.hide-number-spinner {
  input[type=number]::-webkit-inner-spin-button, 
  input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none !important; 
    margin: 0; 
  }
}

mat-card.mat-card {
  & > food-web-edit-save-button {
    position: absolute;
    top: 5px;
    right: 5px;
  }

  mat-card-header.mat-card-header {
    position: relative;
    
    .mat-card-header-text {
      margin-top: -2px;

      .mat-card-subtitle {
        &:not(:first-child) {
          margin-top: -14px;
        }
      }
    }
  }

  mat-card-title.mat-card-title {
    color: $accent-darkest;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 20px !important;
    font-weight: bold !important;
  }
}

.donation-description-container {
  hr {
    margin: 0.6rem 0;

    &:first-child {
      margin-top: 0px;
    }
  }

  span {
    text-align: center;
    display: inline-block;
    margin: 0px 5px;
    width: 100%;
    font-weight: bold;
    font-size: 16px;
    color: $accent-darkest;
  }
}

.disclaimer {
  color: #666;
}

.action-footer {
  button {
    margin-right: 7px;

    &:last-child {
      margin-right: 0px;
    }
  }
}

@-webkit-keyframes greenPulse {
  0% { -webkit-box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
  50% { -webkit-box-shadow: 0px 0px 35px 6px lightgreen inset; }
  100% { -webkit-box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
}

@keyframes greenPulse {
  0% { box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
  50% { box-shadow: 0px 0px 35px 6px lightgreen inset; }
  100% { box-shadow: 0px 0px 20px 3px #D1F5D1 inset; }
}

.green-glow {
  /* Green Pulse inset shadow animation */
  -webkit-animation: greenPulse 5s infinite !important;
  animation: greenPulse 5s infinite !important;
}

.notifications-button {
  .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
    right: -5px;
  }

  .mat-badge-small.mat-badge-above .mat-badge-content {
    top: -5px;
  }
}

.notifications-menu-backdrop + div {
  .mat-menu-panel {
    max-width: 432px;
    width: 100vw;
    overflow-x: hidden;

    .mat-menu-content {
      padding-top: 0;
      padding-bottom: 0;
    }
  }
}

.fade-bottom {
  &:after {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: 0;
    pointer-events: none;
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.67) 90%);
    width: 100%;
    height: 100%;
  }
}

@media only screen and (max-width: $md) {
  .d-inline-block.desktop {
    display: block !important;
  }
}

